@@ -32,6 +32,7 @@ Version 1.4.0
     * fixed possible crash in saving page screen of a really long page
     * fixed showing window in fullscreen with XFCE
     * X11: fixed Ctrl+Q shortcut for DEs other than KDE and Gnome
+    * windows: fixed downloading utf-8 encoded adblock subscriptions
     * windows: improved installer allows registering as default web browser
     * windows: check and set as default browser from preferences
     * mac: fixed not working global menu after closing browser window
